<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="420dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:background="#97000000"
                android:drawableStart="@android:drawable/ic_menu_gallery"
                android:drawablePadding="8dp"
                android:isScrollContainer="false"
                android:padding="8dp"
                android:text="6 photos"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:text="@string/content_price"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_text"
            android:textSize="24sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content_desc"
            android:textSize="16sp"
            android:textColor="#afeeee"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Display"
                android:layout_weight="4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="149dp"
                android:layout_weight="1"
                android:text="@string/content_specs_display" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Prosesor"
                android:layout_weight="4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prosesor"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Memory"
                android:layout_weight="4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_specs_memori"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bettery"
                android:layout_weight="4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_specs_battery"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#00a6ff"
            android:drawableStart="@android:drawable/ic_menu_add"
            android:text="KERANJANG"
            android:textSize="12sp"
            app:icon="@android:drawable/ic_menu_add" />
    </LinearLayout>
</ScrollView>